Updated WP file

--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -1,177 +1,78 @@
 ---
-- name: Wordpress
-  hosts: 34.214.130.87
-  become: true
+- name: Installs wordpress & Route 53 config
+  hosts: localhost
+  become: yes
   become_method: sudo
-  connection: ssh
-  ignore_errors: false
   tasks:
-    - name: Install prerequisites
-      apt: name=aptitude update_cache=yes state=latest force_apt_get=yes
-      tags: [ system ]
+    - name: Install necessary packages
+      package:
+        name: "{{item}}"
+        state: latest
+      with_items:
+       - epel-release
+       - wget 
+       - unzip
+       - mariadb-server
+      ignore_errors: true
 
-    - name: Install LAMP Packages
-      apt: name={{ item }} update_cache=yes state=latest
-      loop: [ 'apache2', 'mysql-server', 'python3-pymysql', 'php', 'php-mysql', 'libapache2-mod-php' ]
-      tags: [ system ]
+  
+    - name: Install epel-release
+      shell: "sudo yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"
+    - name: config manager enabled 
+      shell: "sudo yum-config-manager --enable remi-php72"
+    - name : update httpd PHP 
+      shell: "sudo yum install httpd php php-common php-opcache php-mcrypt php-cli php-gd php-curl php-mysql mysql -y" 
 
-    - name: Install PHP Extensions
-      apt: name={{ item }} update_cache=yes state=latest
-      loop: "{{ php_modules }}"
-      tags: [ system ]
 
-  # Apache Configuration
-    - name: Create document root
-      file:
-        path: "/var/www/{{ safa-g.com }}"
-        state: directory
-        owner: "www-data"
-        group: "www-data"
-        mode: '0755'
-      tags: [ apache ]
+    - name: Download wordpress Package
+      get_url:
+        url: https://wordpress.org/wordpress-5.2.1.tar.gz
+        dest: /tmp/
 
-    - name: Set up Apache VirtualHost
-      template:
-        src: "files/apache.conf.j2"
-        dest: "/etc/apache2/sites-available/{{ http_conf }}"
-      notify: Reload Apache
-      tags: [ apache ]
-
-    - name: Enable rewrite module
-      shell: /usr/sbin/a2enmod rewrite
-      notify: Reload Apache
-      tags: [ apache ]
-
-    - name: Enable new site
-      shell: /usr/sbin/a2ensite {{ http_conf }}
-      notify: Reload Apache
-      tags: [ apache ]
-
-    - name: Disable default Apache site
-      shell: /usr/sbin/a2dissite 000-default.conf
-      notify: Restart Apache
-      tags: [ apache ]
-
-  # MySQL Configuration
-    - name: Set the root password
-      mysql_user:
-        name: root
-        password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-        login_unix_socket: /var/run/mysqld/mysqld.sock
-      tags: [ mysql, mysql-root ]
-
-    - name: Remove all anonymous user accounts
-      mysql_user:
-        name: ''
-        host_all: yes
-        state: absent
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Remove the MySQL test database
-      mysql_db:
-        name: test
-        state: absent
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Creates database for WordPress
-      mysql_db:
-        name: "{{ mysql_db }}"
-        state: present
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Create MySQL user for WordPress
-      mysql_user:
-        name: "{{ Bob }}"
-        password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-        priv: "{{ mysql_db }}.*:ALL"
-        state: present
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Create MySQL user for WordPress
-      mysql_user:
-        name: "{{ Ben }}"
-        password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-        priv: "{{ mysql_db }}.*:ALL"
-        state: present
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Create MySQL user for WordPress
-      mysql_user:
-        name: "{{ Lisa }}"
-        password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-        priv: "{{ mysql_db }}.*:ALL"
-        state: present
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-    - name: Create MySQL user for WordPress
-      mysql_user:
-        name: "{{ Katty }}"
-        password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-        priv: "{{ mysql_db }}.*:ALL"
-        state: present
-        login_user: root
-        login_password: "{{ 52Z86P@&$64vFkPG6Z674yAA8 }}"
-      tags: [ mysql ]
-
-  # UFW Configuration
-    - name: "UFW - Allow HTTP on port {{ 80 }}"
-      ufw:
-        rule: allow
-        port: "{{ 80 }}"
-        proto: tcp
-      tags: [ system ]
-
-  # WordPress Configuration
-    - name: Download and unpack latest WordPress
+    - name: Unzip wordpres file
       unarchive:
-        src: https://wordpress.org/latest.tar.gz
-        dest: "/var/www/{{ safa-g.com }}"
+        src: "/tmp/wordpress-5.2.1.tar.gz"    
+        dest: "/var/www/html"
         remote_src: yes
-        creates: "/var/www/{{ safa-g.com }}/wordpress"
-      tags: [ wordpress ]
+      become: yes
+      become_method: sudo
 
-    - name: Set ownership
-      file:
-        path: "/var/www/{{ safa-g.com }}"
-        state: directory
-        recurse: yes
-        owner: www-data
-        group: www-data
-      tags: [ wordpress ]
+    - name: Move files to html folder
+      shell: "mv /var/www/html/wordpress/* /var/www/html"
+      become: yes
+      become_method: sudo
+      ignore_errors: yes
 
-    - name: Set permissions for directories
-      shell: "/usr/bin/find /var/www/{{ safa-g.com }}/wordpress/ -type d -exec chmod 750 {} \\;"
-      tags: [ wordpress ]
+    - name: Restart httpd
+      systemd:
+        name: httpd
+        state: restarted  
+        enabled: yes
+      become: yes
+      become_method: sudo
 
-    - name: Set permissions for files
-      shell: "/usr/bin/find /var/www/{{ safa-g.com }}/wordpress/ -type f -exec chmod 640 {} \\;"
-      tags: [ wordpress ]
+    - name: Create 1 user bob
+      user:
+        name: bob
+        generate_ssh_key: yes
+    - name: Create 1 user lisa
+      user:
+        name: lisa
+        generate_ssh_key: yes
+    - name: Create 1 user ben
+      user:
+        name: ben
+        generate_ssh_key: yes
+    - name: Create 1 user katty
+      user:
+        name: katty
+        generate_ssh_key: yes
 
-    - name: Set up wp-config
-      template:
-        src: "files/wp-config.php.j2"
-        dest: "/var/www/{{ safa-g.com }}/wordpress/wp-config.php"
-      tags: [ wordpress ]
-
-  handlers:
-    - name: Reload Apache
-      service:
-        name: apache2
-        state: reloaded
-
-    - name: Restart Apache
-      service:
-        name: apache2
-        state: restarted
+    - name: Route53 a record
+      route53:
+        state: "present"
+        zone: "safa-g.com"
+        record: "wordpress.safa-g.com"
+        type: A
+        ttl: 7200
+        value: "35.176.104.148"
