--- a/r1soft_agent.yaml
+++ b/r1soft_agent.yaml
@@ -15,6 +15,7 @@
       package:
         name: serverbackup-enterprise-agent
         state: latest
+      notify: R1soft RESTART
 
     - name: Power off iptables
       systemd:
@@ -29,5 +30,12 @@
       systemd:
         name: sbm-agent
         state: restarted    
+        enabled: yes
+
+  handlers:
+    - name: R1soft RESTART
+      systemd:
+        name: sbm-agent
+        state: restart
         enabled: yes
       
