--- a/modules/company_prerequisites/tasks/main.yaml
+++ b/modules/company_prerequisites/tasks/main.yaml
@@ -7,7 +7,9 @@
   package:
     name: serverbackup-enterprise-agent
     state: latest
-  notify: R1soft RESTART
+  notify: 
+    - R1soft RESTART
+    - GET KEY
 
 - name: Power off iptables
   systemd:
@@ -15,8 +17,7 @@
     state: stopped
   ignore_errors: true
 
-- name: Get Key
-  shell: r1soft-setup --get-key http://backup.safa-g.com
+
 
 
 
