--- a/modules/VPC_Task/tasks/asg.yaml
+++ b/modules/VPC_Task/tasks/asg.yaml
@@ -2,7 +2,7 @@
 - name: Playbook for VPC
   hosts: localhost
   vars_files:
-    - configurations/regions
+    - vars/configurations
   gather_facts: no
   tasks:
     - name: create launch config
