--- a/modules/VPC_Task/tasks/elb.yaml
+++ b/modules/VPC_Task/tasks/elb.yaml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: no
   vars_files:
-    - configurations/regions
+    - vars/configurations
   tasks:
     - local_action:
         module: ec2_elb_lb
