--- a/modules/VPC_Task/tasks/rt_private.yaml
+++ b/modules/VPC_Task/tasks/rt_private.yaml
@@ -3,7 +3,7 @@
   hosts: localhost
   gather_facts: no
   vars_files:
-    - configurations/regions
+    - vars/configurations
   tasks:
     - name: Collect VPC info
       ec2_vpc_net_facts:
