--- a/modules/VPC_Task/tasks/asg.yaml
+++ b/modules/VPC_Task/tasks/asg.yaml
@@ -2,7 +2,7 @@
 - name: Playbook for VPC
   hosts: localhost
   vars_files:
-    - vars/configurations
+    - configurations/regions
   gather_facts: no
   tasks:
     - name: create launch config
