--- a/modules/VPC_Task/tasks/sec_group.yaml
+++ b/modules/VPC_Task/tasks/sec_group.yaml
@@ -2,7 +2,7 @@
 - name: Playbook for sec groups
   hosts: localhost
   vars_files:
-    - vars/configurations
+    - configurations/regions
   gather_facts: no
   tasks:
 
